# time-rfc2822

./: .gitignore  CMakeLists.txt  LICENSE  README.md  go.mod  time-rfc2822.functions.json  time-rfc2822.go
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  supervisord.conf
.devcontainer/smtpd/src/files/: test.hsl
